# dart_cpp_bridge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: push-build.yml
cmake/: fetch_dart_api.cmake
codegen/: README.md  bootstrap.ps1  bootstrap.sh  codegen.ps1  codegen.sh
codegen/scripts/: config_util.py  generate.py  parse_api.py  run_codegen.py  smoke_toolchain.py
codegen/stubs/async_simple/coro/: Lazy.h
dart/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/example/: example.dart
dart/lib/: dart_cpp_bridge.dart
dart/lib/src/: bindings.dart  bridge.dart  codec.dart
dart/test/: codec_test.dart  ffi_basic_test.dart  ffi_sync_async_test.dart
dart/test/support/: library_path.dart
docs/: codegen_type_mapping.md  frb_and_cpp_bridge_design.md  known_issues.md  progress.md
examples/codegen_demo/: CMakeLists.txt  README.md  _build.bat  _configure.bat  dart_cpp_bridge.yaml  pubspec.yaml
examples/codegen_demo/lib/: codegen_demo.dart
examples/codegen_demo/lib/src/native_gen/: api.dart  api.g.dart  api_fn.dart
examples/codegen_demo/native/api/: bridge_api.h  counter.h
examples/codegen_demo/native/api_impl/: bridge_api.cpp  counter.cpp
examples/codegen_demo/test/: api_test.dart
examples/phase1_demo/: smoke_main.cpp
include/dart_cpp_bridge/: annotate.h  asio_executor.hpp  channel.hpp  codec.hpp  dart_fn.hpp  ffi.h  object_handle.hpp  runtime.hpp  session.hpp  stream_sink.hpp
src/: ffi_entry.cpp
src/runtime/: object_handle.cpp  runtime.cpp
src/wire/: demo_api.cpp
